# terminal-slide

./: .gitignore  Cargo.toml  LICENSE  README.md  demo-process.html  terminal-slide.js
.auto-claude/specs/001-create-visual-demos-for-tool-features/: implementation_plan.json  requirements.json  task_metadata.json
assets/: demo.tape  export.tape  html-mode.tape  record-browser.mjs  record-categories.mjs
docs/: index.html
examples/: demo.html  demo.md  gallery.html  interactive.html  interactive.md  math-algo.html
src/: app.rs  cli.rs  export.rs  main.rs  slide.rs
src/html/: mod.rs  nav_snippet.rs  server.rs
src/markdown/: mod.rs  parser.rs  renderer.rs
src/tui/: event.rs  mod.rs  terminal.rs  transitions.rs
templates/: gallery.html  layouts.html  starter-light.html  starter.html  theme-preview.html
templates/themes/: corporate.css  dark.css  light.css  minimal.css  neon.css  paper.css
