[package]
name = "terminal-slide"
version = "0.1.0"
edition = "2021"
description = "Terminal-based slide presentation tool supporting Markdown and HTML"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tachyonfx = "0.11"
pulldown-cmark = "0.12"
syntect = "5"
clap = { version = "4", features = ["derive"] }
tiny_http = "0.12"
open = "5"
anyhow = "1"
